@@ -1,3 +1,5 @@
+2012-06-26 Federico Nova <nova@physics.utexas.edu>
+        * ntupler: vertexes
 2012-06-19 Federico Nova <nova@physics.utexas.edu>
         * ntupler: added charge, momentum
         * display: possibility to plot chi2
